Fix image stretching on safari browser

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -292,15 +292,16 @@ text-align: center;
 .cat-imgL{
 float: left ;
 width: 100%;
-min-height: fit-content;
+/* min-height: fit-content; */
 height: 100%;
+max-height: 100%;
 
 }
 
 .cat-img{
   width: 100%;
-    
-height:auto ; 
+height:auto ;
+max-height: 100%; 
 max-height: 100% ;
 
 
